--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Docker Build and Push
+name: Docker Build and Push to GHCR
 
 on:
   push:
@@ -17,12 +17,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Log in to Docker Hub (or another registry)
-    - name: Log in to Docker Hub
+    # Log in to GitHub Container Registry (GHCR)
+    - name: Log in to GHCR
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+        registry: ghcr.io
+        username: ${{ github.actor }} # GitHub username
+        password: ${{ secrets.TOKEN }} # Automatically provided by GitHub
 
     # Set up Docker Buildx
     - name: Set up Docker Buildx
@@ -33,7 +34,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v4
       with:
-        images: your-dockerhub-username/your-repo-name
+        images: ghcr.io/${{ github.repository_owner }}/your-repo-name
         tags: |
           type=ref,event=branch
           type=ref,event=pr
@@ -41,7 +42,7 @@ jobs:
           type=semver,pattern={{major}}.{{minor}}
           type=semver,pattern={{major}}
 
-    # Build and push the Docker image
+    # Build and push the Docker image to GHCR
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
