--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,57 +1,33 @@
-name: Docker Build and Push to GHCR
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-    - main # Trigger on push to the main branch
-  pull_request:
-    branches:
-    - main # Trigger on pull requests to the main branch
+    - main
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository
+    # Step 1: Check out the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Log in to GitHub Container Registry (GHCR)
-    - name: Log in to GHCR
+    # Step 2: Log in to GitHub Container Registry
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }} # GitHub username
-        password: ${{ secrets.TOKEN }} # Automatically provided by GitHub
+        username: ${{ github.actor }}
+        password: ${{ secrets.TOKEN }}
 
-    # Set up Docker Buildx
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    # Extract metadata (tags, labels) for Docker
-    - name: Extract Docker metadata
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: ghcr.io/${{ github.repository_owner }}/your-repo-name
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-
-    # Build and push the Docker image to GHCR
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: ${{ github.event_name != 'pull_request' }} # Push only if not a PR
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-
-    # Optionally, run tests inside the container
-    - name: Run tests
+    # Step 3: Build the Docker image
+    - name: Build Docker image
       run: |
-        docker run --rm ${{ steps.meta.outputs.tags }} npm test
+        docker build -t ghcr.io/${{ github.repository_owner }}/nodejs-app:latest .
+
+    # Step 4: Push the Docker image to GitHub Container Registry
+    - name: Push Docker image
+      run: |
+        docker push ghcr.io/${{ github.repository_owner }}/nodejs-app:latest
