--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Step 2: Log in to GitHub Container Registry
+    # Step 2: Set file permissions
+    - name: Set file permissions
+      run: |
+        sudo chmod 644 /app/vite.config.ts
+        sudo chown $USER:$USER /app/vite.config.ts
+        sudo chown -R $USER:$USER ./node_modules
+
+    # Step 3: Log in to GitHub Container Registry
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -22,12 +29,12 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.TOKEN }}
 
-    # Step 3: Build the Docker image
+    # Step 4: Build the Docker image
     - name: Build Docker image
       run: |
         docker build -t ghcr.io/${{ github.repository_owner }}/nodejs-app:latest .
 
-    # Step 4: Push the Docker image to GitHub Container Registry
+    # Step 5: Push the Docker image to GitHub Container Registry
     - name: Push Docker image
       run: |
         docker push ghcr.io/${{ github.repository_owner }}/nodejs-app:latest
