--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tabler/icons-react": "^3.19.0",
     "@tailwindcss/typography": "^0.5.15",
     "add": "^2.0.6",
+    "AgentX": "file:",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
